# codeframe

./: CHANGELOG.md  README.md
dynamic-lib-frame/: CMakeLists.txt  README.md  doxyfile
dynamic-lib-frame/demo/: CMakeLists.txt  demo.c  run_demo.sh
dynamic-lib-frame/include/: codeframe.h  service.h
dynamic-lib-frame/src/: codeframe.cpp  service.cpp
lib_pro/: CMakeLists.txt  README.md
lib_pro/demo/: CMakeLists.txt  demo.cpp
lib_pro/docs/doxygen/: README.md
lib_pro/include/: service.h
lib_pro/libs/arm/: README.md
lib_pro/libs/x64/: README.md
lib_pro/src/: project.cpp  service.cpp
python_code_project/: .gitignore  README.md  build.sh  clear.py  main.py  requirements.txt  setup.py
python_code_project/src/: __init__.py  func.py  log.py  main.py  setting.py
python_code_project/src/clear/: __init__.py  path_union.py
python_code_project/src/mode1/: __init__.py  mode1.py
python_code_project/src/mode2/: __init__.py  mode2.py
standard_c_code_project/: CMakeLists.txt  doxyfile
standard_c_code_project/demo/: CMakeLists.txt  build.sh  client_demo.c
standard_c_code_project/include/client/: client.h
standard_c_code_project/include/zlog/: set_dzlog.h  set_zlog.h
standard_c_code_project/libs/x64/zlog/conf/: README.md  zlog.conf
standard_c_code_project/libs/x64/zlog/lib/: libzlog.so.1.2
standard_c_code_project/macro/: cmake_build_macro.h  cmake_build_macro.h.in
standard_c_code_project/src/client/: client.c
standard_c_code_project/src/zlog/: set_dzlog.c  set_zlog.c
standard_code_project/: CMakeLists.txt  build.sh
standard_code_project/demo/: CMakeLists.txt
standard_code_project/include/: service.h
standard_code_project/macro/: cmake_build_macro.h  cmake_build_macro.h.in
standard_code_project/src/: service.cpp
standard_cpp_code_project/: dynamic_lib_build.sh  pack_dynamic_lib_build.sh
standard_cpp_code_project/demo/: valgrind.sh
standard_cpp_code_project/include/: service.h
standard_cpp_code_project/macro/: cmake_build_macro.h
standard_cpp_code_project/src/: project.cpp
